@@ -1,3 +1,12 @@
+2018-09-06  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* pdfencoding.c: Reverted change made for 20071115.
+	ToUnicode creation for simple font was broken. Not working
+	as intended at all.
+	* pdfdoc.c, epdf.c, pdffont.c: Rearranged code.
+	* pdfobj.c: Added some debugging code.
+	* configure.ac: Version 20180906.
+
 2018-09-04  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* pdfobj.c: More fix on circular reference issue.
